# my-system-public

./: .gitignore  CLAUDE.md  ONBOARDING.md  ORG-VIEWER.md  README.md  org.config.json
context/: current-state.md  projects.md  voice.md
knowledge/system/: ccr-remote-agents-local-files.md  delta-gated-agent-maintenance.md  first-action-adhd-pattern.md  qa-hard-gate-pattern.md  recursive-self-learning.md
knowledge/tools/: asset-builder-canvas-json-schema.md  asset-copy-sidecar-pattern.md  canvas-sidecar-json-pattern.md  claude-code-custom-commands.md  claude-code-hook-blocks-persistence.md  claude-code-hook-output-schema.md  claude-code-hook-project-path-encoding.md  claude-code-permissions-allowlist.md  deploy-org-viewer-tsc-npx-cwd.md  dfpi-cloudflare-bypass.md  drag-resize-sidebar.md  egui-frame-interact-pattern.md  eleven-labs-product-analysis.md  fabric-canvas-clear-fires-object-removed.md  fabric-js-vite-tauri.md  fabricjs-bidirectional-text-sync.md  fastapi-pydantic-response-model-strips-fields.md  google-ads-learning-phase.md  maintenance-hook-design.md  markdown-table-upsert-pattern.md  meta-ads-learning-phase.md  obsidian-graph-no-edges.md  obsidian-wikilink-escaping.md  obsidian-workflow-patterns.md  (+69 more)
org-viewer-dev/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
org-viewer-dev/src-tauri/: Cargo.toml  tauri.conf.json
org-viewer-dev/src-tauri/capabilities/: default.json
org-viewer-dev/src-tauri/src/: documents.rs  lib.rs  main.rs  pty.rs  spotify.rs  todoist.rs
setup/: README.md
tasks/: example-task.md
(+56 files in other folders)
