[package]
name = "org-viewer"
version = "0.1.0"
description = "Org Viewer"
authors = ["Bryan Bartley"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "org_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
chrono = { version = "0.4", features = ["clock"] }
notify = "6"
walkdir = "2"
gray_matter = "0.2"
regex = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
once_cell = "1"
url = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"

